@@ -23,6 +23,9 @@ import signal
 import subprocess
 import tempfile
 
+from bzrlib import errors
+
+
 # this is currently test-focused, so importing bzrlib.tests is ok. We might
 # want to move feature to its own module though.
 from bzrlib.tests import Feature
@@ -46,14 +49,17 @@ def strace_detailed(function, args, kwargs, follow_children=True):
     # capture strace output to a file
     log_file = tempfile.NamedTemporaryFile()
     log_file_fd = log_file.fileno()
+    err_file = tempfile.NamedTemporaryFile()
     pid = os.getpid()
     # start strace
     strace_cmd = ['strace', '-r', '-tt', '-p', str(pid), '-o', log_file.name]
     if follow_children:
         strace_args.append('-f')
+    # need to catch both stdout and stderr to work around
+    # bug 627208
     proc = subprocess.Popen(strace_cmd,
                             stdout=subprocess.PIPE,
-                            stderr=subprocess.STDOUT)
+                            stderr=err_file.fileno())
     # Wait for strace to attach
     attached_notice = proc.stdout.readline()
     # Run the function to strace
@@ -65,18 +71,31 @@ def strace_detailed(function, args, kwargs, follow_children=True):
     log_file.seek(0)
     log = log_file.read()
     log_file.close()
-    return result, StraceResult(log)
+    # and stderr
+    err_file.seek(0)
+    err_messages = err_file.read()
+    err_file.close()
+    # and read any errors
+    if err_messages.startswith("attach: ptrace(PTRACE_ATTACH,"):
+        raise StraceError(err_messages=err_messages)
+    return result, StraceResult(log, err_messages)
+
+
+class StraceError(errors.BzrError):
+    
+    _fmt = "strace failed: %(err_messages)s"
 
 
 class StraceResult(object):
     """The result of stracing a function."""
 
-    def __init__(self, raw_log):
+    def __init__(self, raw_log, err_messages):
         """Create a StraceResult.
 
         :param raw_log: The output that strace created.
         """
         self.raw_log = raw_log
+        self.err_messages = err_messages
 
 
 class _StraceFeature(Feature):
